--- a/css/style.css
+++ b/css/style.css
@@ -1739,7 +1739,7 @@ input#email_newsletter:-ms-input-placeholder { /* Internet Explorer 10+ */
 /* h) PopUp Video */
 
 .youtube-video-wrapper{
-	background: url(images/other/img-other-32.png) top center no-repeat;
+	background: url('images/other/img-other-32.png') top center no-repeat;
 	background-size: cover;
 	padding: 160px 0;
 	position: relative;
@@ -1907,3 +1907,4 @@ ul.features-list-hero li i{
   	}
 
 }
+
